create screen-header&fix status-bar

--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -11,3 +11,30 @@
     display: flex;
     justify-content: space-between;
 }
+.nav__link{
+    position: relative;
+}
+.nav__notification{
+    background-color: tomato;
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: 300;
+    font-size: small;
+    position: absolute;
+    left: 12px;
+    bottom: 12px;
+}
+.nav__notice{
+    background-color: tomato;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    position: absolute;
+    left: 18px;
+    bottom: 16px;    
+}
