--- a/css/styles.css
+++ b/css/styles.css
@@ -3,27 +3,14 @@
 @import "variables.css";
 /* Components */
 @import "components/status-bar.css";
+@import "components/welcome-header.css";
 @import "components/nav-bar.css";
+@import "components/screen-header.css";
 /* Screens */
 @import "screens/login.css";
 
 body{
     font-family: 'Roboto Mono', monospace;
 }
-.welcome-header{
-    margin: 90px 0px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.welcome-header__title{
-    margin-bottom: 20px;
-    font-size: 25px;
-    font-weight: 600;
-}
-.welcome-header__text{
-    width: 60%;
-    opacity: 0.7;
-}
+
 
