--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,14 @@
 @import "components/welcome-header.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
+@import "components/user-component.css";
 /* Screens */
 @import "screens/login.css";
+@import "screens/friends.css";
 
 body{
     font-family: 'Roboto Mono', monospace;
+    color: #2e363e;
 }
 
 
