--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 48px;
+    padding: var(--horizontal-space);
+    margin-bottom: 10px;
 }
 .screen-header__title{
     font-size: 23px;
